objects/Currency_Conversion__c.object
<CustomObject>
    <fields>
        <fullName>Bolt_Conversion_Rate__c</fullName>
        <label>Bolt Conversion Rate</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bolt_Conversion_Type__c</fullName>
        <label>Bolt Conversion Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Currency_Combination__c</fullName>
        <formula>Text(Bolt_Version__c)&amp;&apos;-&apos;&amp;Bolt_From_Currency__c&amp;&apos;-&apos;&amp;Bolt_To_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bolt Currency Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_From_Conversion_date__c</fullName>
        <label>Bolt From Conversion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bolt_From_Currency__c</fullName>
        <label>Bolt From Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_To_Conversion_date__c</fullName>
        <label>Bolt To Conversion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bolt_To_Currency__c</fullName>
        <label>Bolt To Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Version__c</fullName>
        <label>Bolt Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueCurrencyId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueCurrencyId</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Currency Conversion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bolt_Version__c</columns>
        <columns>Bolt_From_Currency__c</columns>
        <columns>Bolt_To_Currency__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>